# xbl-mc-web-auth-test

./: .gitignore  LICENSE  README.md  mcauth.py  pyproject.toml
app/: app.py  auth.py  mcauth.py  models.py  templates.py
templates/: index.html  login-error.html
