[tool.poetry]
name = "xbl-mc-web-auth-test"
version = "0.1.0"
description = "Test application for authenticating a web application with xbox live and minecraft"
authors = ["Matthew Messinger <mattmess1221@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.71.0"
uvicorn = "^0.17.0"
Authlib = "^0.15.5"
httpx = "^0.21.3"
itsdangerous = "^2.0.1"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
